feat: interactive dashboard avg scored per week graph

--- a/data/eda_plays.ipynb
+++ b/data/eda_plays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "[8 rows x 24 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -573,44 +573,44 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 12486 entries, 0 to 12485\n",
       "Data columns (total 35 columns):\n",
-      " #   Column                            Non-Null Count  Dtype \n",
-      "---  ------                            --------------  ----- \n",
-      " 0   gameId                            12486 non-null  object\n",
-      " 1   playId                            12486 non-null  object\n",
-      " 2   ballCarrierId                     12486 non-null  object\n",
-      " 3   ballCarrierDisplayName            12486 non-null  object\n",
-      " 4   playDescription                   12486 non-null  object\n",
-      " 5   quarter                           12486 non-null  object\n",
-      " 6   down                              12486 non-null  object\n",
-      " 7   yardsToGo                         12486 non-null  object\n",
-      " 8   possessionTeam                    12486 non-null  object\n",
-      " 9   defensiveTeam                     12486 non-null  object\n",
-      " 10  yardlineSide                      12486 non-null  object\n",
-      " 11  yardlineNumber                    12486 non-null  object\n",
-      " 12  gameClock                         12486 non-null  object\n",
-      " 13  preSnapHomeScore                  12486 non-null  object\n",
-      " 14  preSnapVisitorScore               12486 non-null  object\n",
-      " 15  passResult                        12486 non-null  object\n",
-      " 16  passLength                        12486 non-null  object\n",
-      " 17  penaltyYards                      12486 non-null  object\n",
-      " 18  prePenaltyPlayResult              12486 non-null  object\n",
-      " 19  playResult                        12486 non-null  object\n",
-      " 20  playNullifiedByPenalty            12486 non-null  object\n",
-      " 21  absoluteYardlineNumber            12486 non-null  object\n",
-      " 22  offenseFormation                  12486 non-null  object\n",
-      " 23  defendersInTheBox                 12486 non-null  object\n",
-      " 24  passProbability                   12486 non-null  object\n",
-      " 25  preSnapHomeTeamWinProbability     12486 non-null  object\n",
-      " 26  preSnapVisitorTeamWinProbability  12486 non-null  object\n",
-      " 27  homeTeamWinProbabilityAdded       12486 non-null  object\n",
-      " 28  visitorTeamWinProbilityAdded      12486 non-null  object\n",
-      " 29  expectedPoints                    12486 non-null  object\n",
-      " 30  expectedPointsAdded               12486 non-null  object\n",
-      " 31  foulName1                         12486 non-null  object\n",
-      " 32  foulName2                         12486 non-null  object\n",
-      " 33  foulNFLId1                        12486 non-null  object\n",
-      " 34  foulNFLId2                        12486 non-null  object\n",
-      "dtypes: object(35)\n",
+      " #   Column                            Non-Null Count  Dtype  \n",
+      "---  ------                            --------------  -----  \n",
+      " 0   gameId                            12486 non-null  int64  \n",
+      " 1   playId                            12486 non-null  int64  \n",
+      " 2   ballCarrierId                     12486 non-null  int64  \n",
+      " 3   ballCarrierDisplayName            12486 non-null  object \n",
+      " 4   playDescription                   12486 non-null  object \n",
+      " 5   quarter                           12486 non-null  int64  \n",
+      " 6   down                              12486 non-null  int64  \n",
+      " 7   yardsToGo                         12486 non-null  int64  \n",
+      " 8   possessionTeam                    12486 non-null  object \n",
+      " 9   defensiveTeam                     12486 non-null  object \n",
+      " 10  yardlineSide                      12319 non-null  object \n",
+      " 11  yardlineNumber                    12486 non-null  int64  \n",
+      " 12  gameClock                         12486 non-null  object \n",
+      " 13  preSnapHomeScore                  12486 non-null  int64  \n",
+      " 14  preSnapVisitorScore               12486 non-null  int64  \n",
+      " 15  passResult                        6105 non-null   object \n",
+      " 16  passLength                        5634 non-null   float64\n",
+      " 17  penaltyYards                      615 non-null    float64\n",
+      " 18  prePenaltyPlayResult              12486 non-null  int64  \n",
+      " 19  playResult                        12486 non-null  int64  \n",
+      " 20  playNullifiedByPenalty            12486 non-null  object \n",
+      " 21  absoluteYardlineNumber            12486 non-null  int64  \n",
+      " 22  offenseFormation                  12482 non-null  object \n",
+      " 23  defendersInTheBox                 12481 non-null  float64\n",
+      " 24  passProbability                   12149 non-null  float64\n",
+      " 25  preSnapHomeTeamWinProbability     12486 non-null  float64\n",
+      " 26  preSnapVisitorTeamWinProbability  12486 non-null  float64\n",
+      " 27  homeTeamWinProbabilityAdded       12486 non-null  float64\n",
+      " 28  visitorTeamWinProbilityAdded      12486 non-null  float64\n",
+      " 29  expectedPoints                    12486 non-null  float64\n",
+      " 30  expectedPointsAdded               12485 non-null  float64\n",
+      " 31  foulName1                         592 non-null    object \n",
+      " 32  foulName2                         25 non-null     object \n",
+      " 33  foulNFLId1                        592 non-null    float64\n",
+      " 34  foulNFLId2                        25 non-null     float64\n",
+      "dtypes: float64(12), int64(12), object(11)\n",
       "memory usage: 3.3+ MB\n"
      ]
     }
@@ -621,7 +621,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['C', nan, 'R'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[:,'passResult'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -894,13 +914,33 @@
        "[12486 rows x 11 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.loc[:,cols_str]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['C', '', 'R'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[:,'passResult'].unique()"
    ]
   },
   {
